<resources>
    <string name="app_name">Shogun</string>
    <string name="information">Information</string>
    <string name="enter_your_userid">Enter your UserID</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="you_do_not_have_an_account_yet_create_one_here">You do not have an account yet ? create one here</string>
    <string name="generate_id">Generate ID</string>
    <string name="enter_your_userid_rg">Enter your UserID</string>
    <string name="enter_your_password_rg">Enter your Password</string>
    <string name="confirm_your_password_rg">Confirm your password</string>
    <string name="create_account_rg">Create Account</string>
    <string name="verify">Verify</string>
    <string name="login">Login</string>
    <string name="accept">Accept</string>
    <string name="refuse">Decline</string>
    <string name="update_history">Update History</string>
    <array name="language">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Russian</item>
        <item>Arabic</item>
    </array>
    <array name="Menu">
        <item>Xml</item>
        <item>ImGui</item>
    </array>
</resources>