<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bk_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="384dp"
        android:layout_height="332dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/genID"
            android:layout_width="match_parent"
            android:layout_height="26dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@color/Blue"
                android:text="@string/generate_id"
                android:textColor="@color/white"
                tools:ignore="TextSizeCheck" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="⚠️This ID is unique to reset it contact a developer ⚠️"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtid1"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:shadowColor="@color/Green"
                android:text="------------"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomInputLayout"
                android:layout_width="358dp"
                android:layout_height="73dp"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserIDrg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/cs_person"
                    android:drawablePadding="14dp"
                    android:hint="@string/enter_your_userid_rg"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="#99FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomInputLayout"
                android:layout_width="358dp"
                android:layout_height="73dp"
                app:counterEnabled="true"
                app:counterMaxLength="24"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordrg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/cs_lock"
                    android:drawablePadding="14dp"
                    android:hint="@string/enter_your_password_rg"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPassword"
                    android:maxLength="24"
                    android:textColor="#99FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomInputLayout"
                android:layout_width="358dp"
                android:layout_height="73dp"
                app:counterEnabled="true"
                app:counterMaxLength="24"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmrg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/cs_lock"
                    android:drawablePadding="14dp"
                    android:hint="@string/confirm_your_password_rg"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPassword"
                    android:maxLength="24"
                    android:textColor="#99FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/rg"
                android:layout_width="214dp"
                android:layout_height="46dp"
                android:background="@drawable/bk_button"
                android:text="@string/create_account_rg"
                android:textColor="@color/white"
                app:cornerRadius="6dp"
                tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>